# kg-currency-parser-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
app/: bot.py  keyboards.py  tables.py  utils.py
app/handlers/: const.py  currency_handler.py  default_handler.py
tests/: fixtures.py  test_utils.py
